--- a/assets/src/scss/frontend/_global.scss
+++ b/assets/src/scss/frontend/_global.scss
@@ -17,10 +17,9 @@
 /*  start reset css */
 body {
 	background: #fff;
-
-	&.learnpress-page {
-		overflow-x: hidden;
-	}
+	//&.learnpress-page {
+	//	overflow-x: hidden;
+	//}
 }
 
 button {
